--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
             margin: 0 10px;
             font-size: 1.2rem;
         }
+
+        .logo {
+            width: 40px;
+            margin-right: 10px;
+        }
     </style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
+            <img class="logo"
+                src="https://w1.pngwing.com/pngs/376/690/png-transparent-mobile-logo-online-shopping-shopping-cart-online-marketplace-mobile-phones-maecenas-windows-marketplace-black.png"
+                alt="photo">
             <a class="navbar-brand mx-auto" href="#">Інтернет-магазин</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +54,7 @@
                         <a class="nav-link" href="#admins">Адміністратори</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacts">Контакти</a>
+                        <a class="nav-link" href="./contact.html">Контакти</a>
                     </li>
                 </ul>
             </div>
@@ -148,11 +156,12 @@
             <!-- Адміністратор 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://masterpiecer-images.s3.yandex.net/dc9fdb24999611ee9e6ffac5ed247044:upscaled"
+                    <img height="430px"
+                        src="https://masterpiecer-images.s3.yandex.net/dc9fdb24999611ee9e6ffac5ed247044:upscaled"
                         class="card-img-top" alt="Адміністратор 1">
                     <div class="card-body">
                         <h5 class="card-title">Олександр Іваненко</h5>
-                        <p class="card-text">Головний адміністратор. Відповідає за координацію роботи магазину.</p>
+                        <p class="card-text">Координація роботи магазину.</p>
                     </div>
                 </div>
             </div>
@@ -160,11 +169,10 @@
             <!-- Адміністратор 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img height="415px" src="https://img.pikbest.com/origin/10/11/52/419pIkbEsTCvU.jpg!w700wp"
-                        class="card-img-top" alt="Адміністратор 2">
+                    <img height="430px" src="./admin2.png" class="card-img-top" alt="Адміністратор 2">
                     <div class="card-body">
                         <h5 class="card-title">Марія Петрова</h5>
-                        <p class="card-text">Відповідає за підтримку клієнтів та обробку замовлень.</p>
+                        <p class="card-text">Підтримка клієнтів та обробка замовлень.</p>
                     </div>
                 </div>
             </div>
@@ -172,11 +180,10 @@
             <!-- Адміністратор 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img height="440px" src="https://cdn.pixabay.com/photo/2024/01/29/14/39/woman-8540033_1280.jpg"
-                        class="card-img-top" alt="Адміністратор 3">
+                    <img height="430px" src="./admin3.png" class="card-img-top" alt="Адміністратор 3">
                     <div class="card-body">
                         <h5 class="card-title">Ірина Коваленко</h5>
-                        <p class="card-text">Спеціаліст з маркетингу та реклами.</p>
+                        <p class="card-text">Маркетинг та реклама.</p>
                     </div>
                 </div>
             </div>
