--- a/index.html
+++ b/index.html
@@ -28,6 +28,34 @@
             width: 40px;
             margin-right: 10px;
         }
+
+        .modal-header {
+            background-color: #f8f9fa;
+            border-bottom: 2px solid #007bff;
+        }
+
+        .modal-title {
+            color: #007bff;
+        }
+
+        .modal-body {
+            font-size: 1.1rem;
+        }
+
+        .modal-footer {
+            background-color: #f8f9fa;
+            border-top: 2px solid #007bff;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
     </style>
 </head>
 
@@ -73,7 +101,8 @@
                         <h5 class="card-title">Смартфон Samsung Galaxy</h5>
                         <p class="card-text">Сучасний смартфон з якісною камерою та потужним процесором.</p>
                         <p class="card-text"><strong>Ціна: 12,000 грн</strong></p>
-                        <a href="#" class="btn btn-primary">Купити</a>
+                        <button class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#buyModal">Купити</button>
                     </div>
                 </div>
             </div>
@@ -87,7 +116,8 @@
                         <h5 class="card-title">Ноутбук Lenovo ThinkPad</h5>
                         <p class="card-text">Ідеальний для роботи та навчання. Легкий, швидкий та надійний.</p>
                         <p class="card-text"><strong>Ціна: 25,000 грн</strong></p>
-                        <a href="#" class="btn btn-primary">Купити</a>
+                        <button class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#buyModal">Купити</button>
                     </div>
                 </div>
             </div>
@@ -100,8 +130,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Навушники AirPods Pro</h5>
                         <p class="card-text">Шумозаглушення, висока якість звуку та стильний дизайн.</p>
-                        <p class="card-text"><strong>Ціна: 7,000 грн</strong></p>
-                        <a href="#" class="btn btn-primary">Купити</a>
+                        <button class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#buyModal">Купити</button>
                     </div>
                 </div>
             </div>
@@ -115,7 +145,8 @@
                         <h5 class="card-title">Смарт-годинник Apple Watch</h5>
                         <p class="card-text">Відстежуйте здоров'я та активність з преміум-якістю.</p>
                         <p class="card-text"><strong>Ціна: 10,500 грн</strong></p>
-                        <a href="#" class="btn btn-primary">Купити</a>
+                        <button class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#buyModal">Купити</button>
                     </div>
                 </div>
             </div>
@@ -129,7 +160,8 @@
                         <h5 class="card-title">Ігрова консоль PlayStation 5</h5>
                         <p class="card-text">Неймовірна графіка та широкий вибір ігор для всіх геймерів.</p>
                         <p class="card-text"><strong>Ціна: 18,000 грн</strong></p>
-                        <a href="#" class="btn btn-primary">Купити</a>
+                        <button class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#buyModal">Купити</button>
                     </div>
                 </div>
             </div>
@@ -143,7 +175,8 @@
                         <h5 class="card-title">Фітнес-браслет Xiaomi Mi Band</h5>
                         <p class="card-text">Стежте за своїм здоров'ям з доступним і надійним помічником.</p>
                         <p class="card-text"><strong>Ціна: 1,200 грн</strong></p>
-                        <a href="#" class="btn btn-primary">Купити</a>
+                        <button class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#buyModal">Купити</button>
                     </div>
                 </div>
             </div>
@@ -214,7 +247,40 @@
         </div>
     </footer>
 
+    <!-- Модальне вікно -->
+    <div class="modal fade" id="buyModal" tabindex="-1" aria-labelledby="buyModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="buyModalLabel">Підтвердження покупки</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Ви дійсно бажаєте придбати цей товар? Натисніть "Підтвердити", щоб завершити покупку.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Скасувати</button>
+                    <button type="button" class="btn btn-primary">Підтвердити</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const confirmButton = document.querySelector('#buyModal .btn-primary');
+
+            confirmButton.addEventListener('click', () => {
+                alert('Дякуємо за покупку!');
+                // Закриття модального вікна
+                const buyModal = document.querySelector('#buyModal');
+                const modalInstance = bootstrap.Modal.getInstance(buyModal);
+                modalInstance.hide();
+            });
+        });
+    </script>
 </body>
 
 </html>
