--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Навушники AirPods Pro</h5>
                         <p class="card-text">Шумозаглушення, висока якість звуку та стильний дизайн.</p>
+                        <p class="card-text"><strong>Ціна: 8,000 грн</strong></p>
                         <button class="btn btn-primary" data-bs-toggle="modal"
                             data-bs-target="#buyModal">Купити</button>
                     </div>
