--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Інтернет-магазин</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .filtet{
+        .filtet {
             margin-left: 250px;
         }
+
         .row {
             row-gap: 10px;
         }
@@ -187,8 +188,8 @@
             <div class="col-md-4 product" data-category="smartwatches" data-price="5000" data-rating="5"
                 data-brand="xiaomi">
                 <div class="card">
-                    <img src="https://files.foxtrot.com.ua/PhotoNew/img_0_22162_247_0_1_6K7rlI.jpg"
-                        class="card-img-top" alt="Смарт-годинник">
+                    <img src="https://files.foxtrot.com.ua/PhotoNew/img_0_22162_247_0_1_6K7rlI.jpg" class="card-img-top"
+                        alt="Смарт-годинник">
                     <div class="card-body">
                         <h5 class="card-title">Смарт-годинник Xiaomi Mi Band</h5>
                         <p class="card-text">Відстеження фізичної активності та моніторинг сну.</p>
@@ -248,8 +249,8 @@
             <!-- Товар 8 -->
             <div class="col-md-4 product" data-category="laptops" data-price="20000" data-rating="4" data-brand="dell">
                 <div class="card">
-                    <img src="https://content2.rozetka.com.ua/goods/images/big/497387688.jpg"
-                        class="card-img-top" alt="Ноутбук">
+                    <img src="https://content2.rozetka.com.ua/goods/images/big/497387688.jpg" class="card-img-top"
+                        alt="Ноутбук">
                     <div class="card-body">
                         <h5 class="card-title">Ноутбук Dell XPS 13</h5>
                         <p class="card-text">Легкий та потужний ноутбук для роботи та розваг.</p>
@@ -264,11 +265,13 @@
             <div class="col-md-4 product" data-category="headphones" data-price="6000" data-rating="5"
                 data-brand="sony">
                 <div class="card">
-                    <img height="412px" src="https://hires.com.ua/content/images/46/498x536l50nn0/naushniki-sony-wh-1000xm4-tsvetchernyy-17702176566174.jpg"
+                    <img height="412px"
+                        src="https://hires.com.ua/content/images/46/498x536l50nn0/naushniki-sony-wh-1000xm4-tsvetchernyy-17702176566174.jpg"
                         class="card-img-top" alt="Навушники">
                     <div class="card-body">
                         <h5 class="card-title">Навушники Sony WH-1000XM4</h5>
-                        <p class="card-text">Найкраща якість звуку та шумозаглушення забезпечують кристально чистий звук.</p>
+                        <p class="card-text">Найкраща якість звуку та шумозаглушення забезпечують кристально чистий
+                            звук.</p>
                         <p class="card-text"><strong>Ціна: 6,000 грн</strong></p>
                         <button class="btn btn-primary" data-bs-toggle="modal"
                             data-bs-target="#buyModal">Купити</button>
@@ -284,7 +287,8 @@
                         class="card-img-top" alt="Смарт-годинник">
                     <div class="card-body">
                         <h5 class="card-title">Смарт-годинник Huawei Watch GT 2</h5>
-                        <p class="card-text">Моніторинг здоров'я та відстеження активності допомагають контролювати фізичну форму.</p>
+                        <p class="card-text">Моніторинг здоров'я та відстеження активності допомагають контролювати
+                            фізичну форму.</p>
                         <p class="card-text"><strong>Ціна: 4,500 грн</strong></p>
                         <button class="btn btn-primary" data-bs-toggle="modal"
                             data-bs-target="#buyModal">Купити</button>
@@ -294,8 +298,8 @@
 
             <div class="col-md-4 product" data-category="fitness" data-price="3000" data-rating="4" data-brand="sony">
                 <div class="card">
-                    <img src="https://files.foxtrot.com.ua/PhotoNew/img_0_22162_211_0.jpg"
-                        class="card-img-top" alt="Фітнес-браслет">
+                    <img src="https://files.foxtrot.com.ua/PhotoNew/img_0_22162_211_0.jpg" class="card-img-top"
+                        alt="Фітнес-браслет">
                     <div class="card-body">
                         <h5 class="card-title">Фітнес-браслет Sony SmartBand</h5>
                         <p class="card-text">Вимірюйте свою активність і слідкуйте за здоров'ям.</p>
